ArgoCd/Ingress/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-internel-service
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
