ArgoCd/Ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - host: domainName
      http:
        paths:
          - backend:
              serviceName: my-app-internel-service
              servicePort: 80
